# TNM086-VR-Technology

./: .gitignore  README.md
lab1/: README.md  stubb.cpp
lab2/: CMakeLists.txt  MyApp.cpp  MyApp.hh  start.bash  start.bat
lab2/config/: desktop-2-node-VRPN-tracking.xml  desktop-2-node-no-tracking.xml  desktop-2-node-time-based-tracking.xml  desktop-single-VRPN-tracking.xml  desktop-single-time-based-tracking.xml
lab3/: color.py  scene.x3d
